# pinback

./: .clang-format  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  codeql.yml  platform-shells.yml  server.yml
docs/: ARCHITECTURE_REDO.md  CONCURRENCY.md  REPO_LAYOUT.md  ds4-runtime-cockpit.md  gui-aperture.md  macos-shipping-options.md  todo-paint.md  v0-postmortem.md
docs/architecture/: ARCHITECTURE_REDO.md  gui-aperture.md  transport-findings.md
docs/backlog/: todo-paint.md
docs/operations/: ds4-runtime-cockpit.md
docs/postmortems/: v0-postmortem.md
experiments/: README.md
experiments/transport-probe/: nonint_dsml.py  switch_probe.py
ingress/: Caddyfile
pinback/: .gitignore  Makefile
pinback/docs/: transport-findings.md
pinback/ingress/: README.md  tailscale-funnel.sh  wg-quick.conf.example
pinback/platform/: .gitignore  README.md  SIZE.md
pinback/platform/android/: build.gradle.kts
pinback/platform/android/app/: build.gradle.kts
pinback/platform/android/app/src/main/kotlin/com/pinback/shell/: MainActivity.kt
pinback/platform/android/app/src/main/res/values/: ic_launcher_background.xml
pinback/platform/android/app/src/main/res/xml/: network_security_config.xml
pinback/platform/icons/: generate.py
pinback/platform/ios/Pinback/: Info.plist  PinbackApp.swift
pinback/platform/ios/Pinback.xcodeproj/xcshareddata/xcschemes/: Pinback.xcscheme
pinback/platform/ios/Pinback/Assets.xcassets/AppIcon.appiconset/: Contents.json
pinback/platform/linux/: dev.pinback.shell.desktop  meson.build
pinback/platform/macos/: README.md
pinback/platform/macos/Scripts/: bundle.sh
pinback/platform/macos/Sources/PinbackShell/: PinbackServer.swift  PinbackShellApp.swift
pinback/platform/windows/: CMakeLists.txt  README.md  app.manifest  app.rc  build.bat  main.cpp
pinback/src/: agent.c  agent.h  event_log.c  event_log.h  handlers.c  handlers.h  http.h  log.c  log.h  pinback.c  snapshot.c  snapshot.h  tracestream.c  util.c  util.h  vterm.c  vterm.h  workspace.c  workspace.h
pinback/tests/: test_agent.c  test_event_log.c  test_workspace.c
pinback/tools/: pinback-smoke
pinback/tools/transport-probe/: dsml_probe.py  nonint_clean.py  save_probe.py  switch2.py  trace_verify.py  vterm_ref.py
pinback/web/: app.js  index.html
pinback/web-build/: package-lock.json  package.json
platform/: .gitignore  CONTRACT.md  README.md  SIZE.md  smoke-test.sh
platform/android/: README.md  build.bat  build.sh  settings.gradle.kts  smoke-runtime.ps1  verify-apk.ps1
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/: .gitignore  setup.html
platform/android/app/src/main/kotlin/com/pinback/shell/: MainActivity.kt
platform/android/app/src/main/res/xml/: network_security_config.xml
platform/android/gradle/: libs.versions.toml
platform/common/: README.md  pinback-host.js  pinback_url.c  pinback_url.h  setup.html
platform/ios/: README.md  build.sh
platform/ios/Pinback/: Info.plist  PinbackApp.swift
platform/ios/Pinback.xcodeproj/: project.pbxproj
platform/linux/: README.md  main.c  meson.build
platform/macos/: Package.swift  README.md  build.sh
platform/macos/Resources/: AppIcon.icns
platform/macos/Scripts/: bundle.sh
platform/macos/Sources/PinbackShell/: PinbackShellApp.swift  main.m  pinback_url.c  pinback_url.h
platform/windows/: CMakeLists.txt  README.md  build.bat  main.cpp  smoke-test.ps1
runtime/: README.md  com.pinback.ds4-runtime.plist  ds4_agent_webpty.py  ds4_bucket0_live_smoke.sh  ds4_runtime_supervisor.py  test_ds4_webpty_supervisor.py
runtime/ui/: package.json
runtime/ui/src/: App.tsx  ds4Bridge.ts
scripts/ci/: actionlint.sh  cppcheck.sh  lint.sh
scripts/embed/: gen-static-assets.sh
scripts/qa/: kv-resume-smoke  pinback-e2e
src/: agent.c  agent.h  event_log.c  event_log.h  handlers.c  handlers.h  http.c  http.h  log.c  log.h  pinback.c  snapshot.c  snapshot.h  static_assets.h  tracestream.c  tracestream.h  util.c  util.h  vterm.c  vterm.h  workspace.c  workspace.h
tests/: test_agent.c  test_event_log.c  test_http.c  test_main.c  test_tracestream.c  test_util.c
tests/support/: fake-ds4-agent.c  fake-kv-ds4-agent.c
tools/: README.md  com.pinback.ds4-runtime.plist  com.webkitium.ds4-runtime.plist  ds4_agent_webpty.py  ds4_bucket0_live_smoke.sh  ds4_contract.py  ds4_runtime_supervisor.py  fake-ds4-agent.c  gen-static-assets.sh  pinback-e2e  test_ds4_webpty_supervisor.py
tools/ds4-agent-ui/: ds4-interface-contract.json  index.html  tsconfig.json  vite.config.ts
tools/ds4-agent-ui/src/: App.tsx  main.tsx  styles.css
tools/transport-probe/: probe.py  stream_probe.py  trace_probe.py
ui/app/: README.md  app.js  index.html
ui/shiki-bundle/: README.md
web/: app.js  index.html
web-build/: shiki-entry.mjs
web-build/fixtures/: long.md
